--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title> Tic Tac Toe Project - Angular 6</title>
-  <base href="/tic-tac-toe">
+  <base href="/">
   <!--or //domain.com/tic-tac-toe-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
